--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
